--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <meta charset="UTF-8">
 
-<title>Page Title</title>
+<title>Notes</title>
 <body>
 
-  <h1>This is a Heading</h1>
-  <p>This is a paragraph.</p>
-  <p>This is another paragraph.</p>
+  <h1>Notes</h1>
+  <A HREF = "Precalculus.html">Precalculus</A>
+  <A HREF = "Go.html">Go</A>
  
 </body>
 </html>
