--- a/Go.html
+++ b/Go.html
@@ -6,8 +6,8 @@
 <body>
 
   <h1>Go</h1>
-  <A HREF = "Precalculus.html">Precalculus</A>
-  <A HREF = "Go.html">Go</A>
+  <A HREF = ""></A>
+  <A HREF = ""></A>
  
 </body>
 </html>
