--- a/Precalculus.html
+++ b/Precalculus.html
@@ -6,8 +6,8 @@
 <body>
 
   <h1>Precalculus</h1>
-  <A HREF = ""></A>
-  <A HREF = ""></A>
+  <A HREF = "Precalculus.1.html">Functions</A>
+  <A HREF = "Precalculus.2.html">Elementary Functions</A>
  
 </body>
 </html>
