--- a/Precalculus.html
+++ b/Precalculus.html
@@ -6,7 +6,7 @@
 <body>
 
   <h1>Precalculus</h1>
-  <A HREF = "Precalculus.1.html">Functions</A>
+  <A HREF = "Precalculus.1.html">Introdudction to Functions</A>
   <A HREF = "Precalculus.2.html">Elementary Functions</A>
  
 </body>
