--- a/Precalculus.1.html
+++ b/Precalculus.1.html
@@ -5,7 +5,7 @@
 <title>Precalculus</title>
 <body>
 
-  <h1>Functions</h1>
+  <h1>Introduction to Functions</h1>
   <p>A <b>relation</b> is a set of ordered pairs. (input,output)</p>
   <p>The set consisting of the first components of each ordered pair is called the <b>domain</b> and the second 
      set consisting of the second components of each ordered pair is called the <b>range.</b></p>
