--- a/Precalculus.2.html
+++ b/Precalculus.2.html
@@ -6,9 +6,12 @@
 <body>
 
   <h1>Elementary Functions</h1>
-  <p>y=x<br>
-    <iframe src="https://www.desmos.com/calculator/nvcqyteiyu?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br></p>
-  <p></p>
+  <p>y = x<br>
+  <iframe src="https://www.desmos.com/calculator/nvcqyteiyu?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: (-oo,oo)</br></p>
+  <p>y = x^2<br>
+  <iframe src="https://www.desmos.com/calculator/jwsdqtr6l4?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: [0,oo)</p>
   <p></p>
   <p></p>
   <p></p>
