--- a/Precalculus.2.html
+++ b/Precalculus.2.html
@@ -12,9 +12,13 @@
   <p>y = x^2<br>
   <iframe src="https://www.desmos.com/calculator/jwsdqtr6l4?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
   domain: (-oo,oo) range: [0,oo)</p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <p>y = x^3<br>
+  <iframe src="https://www.desmos.com/calculator/tqj4io6frn?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: (-oo,oo)</p>
+  <p>y = 1/x<br>
+  <iframe src="https://www.desmos.com/calculator/cpvlmvltge?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,0) U (0,oo) range: (-oo,0) U (0,oo)</p>
+  
  
 </body>
 </html>
