--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Notes</h1>
   <A HREF = "Precalculus.html">Precalculus</A>
   <A HREF = "Go.html">Go</A>
+  <A HREF = "Leauge.html">League of Legends</A>
  
 </body>
 </html>
