--- a/Leauge.1.html
+++ b/Leauge.1.html
@@ -6,9 +6,18 @@
 <body>
 
   <h1>Champion Basics</h1>
-  <p></p>
-  <p></p>
-  <p></p>
+  <p><b>Basic attacks</b> occur when a player right clicks on a target. Doing so will cause a champion to continually attack a target untin it dies. Basic attack damage is generally affected by physical damage.</p>
+  <p><b>Abilities</b> are casting using Q, W, E and R. Nearly every champion has abilities that are unique to them bound to each of these keys.</p>
+  <p><b>Summoner spells</b> act as two additional abilities with their own purposes and cooldowns. <br>
+  <b>Heal</b>: instantly replenishes some of your health and increases your movement speed. It also heals one other ally, whichever is closest to dying.</br><br>
+  <b>Ghost</b>: grants a large amount of incresased movement speed and allows you to run through units.</br><br>
+  <b>Barrier</b>: instantly grants you a shield that is great for mitigating burst damage.</br><br>
+  <b>Exhaust</b>: slows a champion and redueces their damage output for a durration.</br><br>
+  <b>Flash</b>: allows you to blink a short distance in any direction.</br><br>
+  <b>Teleport</b>: allows you to port to an allied tower after a channel time.</br><br>
+  <b>Smite</b>: instantly cast a high burst damage upon a minion, monster or pet.</br><br>
+  <b>Cleanse</b>: removes disables (except being airborne, from knockouts or being supressed.)</br><br>
+  <b>Ignite</b>: inflicts a small amount of burning damage over time to a champion.</br></p>
   <p></p>
   <p></p>
   <p></p>
