--- a/League.1.html
+++ b/League.1.html
@@ -18,9 +18,19 @@
   <b>Smite</b>: instantly cast a high burst damage upon a minion, monster or pet.</br><br>
   <b>Cleanse</b>: removes disables (except being airborne, from knockouts or being supressed.)</br><br>
   <b>Ignite</b>: inflicts a small amount of burning damage over time to a champion.</br></p>
+  <p><b>Champion stats</b> represent a champion's make up as far as how hard they are to kill, how much damage they do, and how fast they move or attack.<br>
+  <b>Health</b>: represents the amount of damage you can take before dying.</br><br>
+  <b>Ability resources (mana, energy, etc.)</b>: abilities cost resources in order to cast them.</br><br>
+  <b>Attack damage</b>: or physical damage, represents the damage dealt by basic auto-attacks or abilities that scale on AD.</br><br>
+  <b>Ability power</b>: primarily makes your abilities more powerful.</br><br>
+  <b>Armor</b>: is a defnsive stat that mitigates attack damage.</br><br>
+  <b>Magic resistance</b>: is a defensive stat that mitigates ability power damage.</br><br>
+  <b>Attack speed</b>: represents how fast your champion auto-attacks.</br><br>
+  <b>Ability haste</b>: abilities have "cooldowns" representing how long it will be before you can cast it again. Ability haste reduces the timer on coldowns so you can cast more frequently.</br><br>
+  <b>Critical strike chance</b>: critical strikes cause your auto-attacks to deal double its damage. </br><br>
+  <b>Movement speed</b>: represents how fast your champion moves around the map.</br></p>
   <p></p>
-  <p></p>
-  <p></p>
+<p></p>
  
 </body>
 </html>
