--- a/League.1.html
+++ b/League.1.html
@@ -18,6 +18,7 @@
   <b>Smite</b>: instantly cast a high burst damage upon a minion, monster or pet.</br><br>
   <b>Cleanse</b>: removes disables (except being airborne, from knockouts or being supressed.)</br><br>
   <b>Ignite</b>: inflicts a small amount of burning damage over time to a champion.</br></p>
+  <p><b>Champion experience</b> every champion starts at level 1 and continues up to level 18. Champions gain experience by farming minons and jungle camps or participating in champion kills. Destroying objectives (turrets, inhibitors, etc.) also grants team gold and experience.</p>
   <p><b>Champion stats</b> represent a champion's make up as far as how hard they are to kill, how much damage they do, and how fast they move or attack.<br>
   <b>Health</b>: represents the amount of damage you can take before dying.</br><br>
   <b>Ability resources (mana, energy, etc.)</b>: abilities cost resources in order to cast them.</br><br>
@@ -29,8 +30,7 @@
   <b>Ability haste</b>: abilities have "cooldowns" representing how long it will be before you can cast it again. Ability haste reduces the timer on coldowns so you can cast more frequently.</br><br>
   <b>Critical strike chance</b>: critical strikes cause your auto-attacks to deal double its damage. </br><br>
   <b>Movement speed</b>: represents how fast your champion moves around the map.</br></p>
-  <p></p>
-<p></p>
+  <p><b>Runes and Items</b> runes and items are constantly changing but they are each ways to enhance champion abilities and stats. Runes are set up before a match, and items are bought with earned gold within a match.</p>
  
 </body>
 </html>
