--- a/League.1.html
+++ b/League.1.html
@@ -5,32 +5,8 @@
 <title>Leauge of Legends</title>
 <body>
 
-  <h1>Champion Basics</h1>
-  <p><b>Basic attacks</b> occur when a player right clicks on a target. Doing so will cause a champion to continually attack a target untin it dies. Basic attack damage is generally affected by physical damage.</p>
-  <p><b>Abilities</b> are casting using Q, W, E and R. Nearly every champion has abilities that are unique to them bound to each of these keys.</p>
-  <p><b>Summoner spells</b> act as two additional abilities with their own purposes and cooldowns. <br>
-  <b>Heal</b>: instantly replenishes some of your health and increases your movement speed. It also heals one other ally, whichever is closest to dying.</br><br>
-  <b>Ghost</b>: grants a large amount of incresased movement speed and allows you to run through units.</br><br>
-  <b>Barrier</b>: instantly grants you a shield that is great for mitigating burst damage.</br><br>
-  <b>Exhaust</b>: slows a champion and redueces their damage output for a durration.</br><br>
-  <b>Flash</b>: allows you to blink a short distance in any direction.</br><br>
-  <b>Teleport</b>: allows you to port to an allied tower after a channel time.</br><br>
-  <b>Smite</b>: instantly cast a high burst damage upon a minion, monster or pet.</br><br>
-  <b>Cleanse</b>: removes disables (except being airborne, from knockouts or being supressed.)</br><br>
-  <b>Ignite</b>: inflicts a small amount of burning damage over time to a champion.</br></p>
-  <p><b>Champion experience</b> every champion starts at level 1 and continues up to level 18. Champions gain experience by farming minons and jungle camps or participating in champion kills. Destroying objectives (turrets, inhibitors, etc.) also grants team gold and experience.</p>
-  <p><b>Champion stats</b> represent a champion's make up as far as how hard they are to kill, how much damage they do, and how fast they move or attack.<br>
-  <b>Health</b>: represents the amount of damage you can take before dying.</br><br>
-  <b>Ability resources (mana, energy, etc.)</b>: abilities cost resources in order to cast them.</br><br>
-  <b>Attack damage</b>: or physical damage, represents the damage dealt by basic auto-attacks or abilities that scale on AD.</br><br>
-  <b>Ability power</b>: primarily makes your abilities more powerful.</br><br>
-  <b>Armor</b>: is a defnsive stat that mitigates attack damage.</br><br>
-  <b>Magic resistance</b>: is a defensive stat that mitigates ability power damage.</br><br>
-  <b>Attack speed</b>: represents how fast your champion auto-attacks.</br><br>
-  <b>Ability haste</b>: abilities have "cooldowns" representing how long it will be before you can cast it again. Ability haste reduces the timer on coldowns so you can cast more frequently.</br><br>
-  <b>Critical strike chance</b>: critical strikes cause your auto-attacks to deal double its damage. </br><br>
-  <b>Movement speed</b>: represents how fast your champion moves around the map.</br></p>
-  <p><b>Runes and Items</b> runes and items are constantly changing but they are each ways to enhance champion abilities and stats. Runes are set up before a match, and items are bought with earned gold within a match.</p>
+  <h1>Stats</h1>
+  <p></p>
  
 </body>
 </html>
