--- a/League.html
+++ b/League.html
@@ -6,7 +6,7 @@
 <body>
 
   <h1>League of Legends</h1>
-  <A HREF = "League.1.html">Champion Basics</A>
+  <A HREF = "League.1.html">Champion Stats</A>
   <A HREF = "League.2.html">Precalculus</A>
   <A HREF = "League.3.html">Precalculus</A>
   <A HREF = "League.4.html">Precalculus</A>
