--- a/League.html
+++ b/League.html
@@ -6,12 +6,12 @@
 <body>
 
   <h1>League of Legends</h1>
-  <A HREF = "League.1.html">Champion Stats</A>
-  <A HREF = "League.2.html">Precalculus</A>
-  <A HREF = "League.3.html">Precalculus</A>
-  <A HREF = "League.4.html">Precalculus</A>
-  <A HREF = "Leauge.5.html">Precalculus</A>
-  <A HREF = "Leauge.6.html">Precalculus</A>
+  <A HREF = "League.aatrox.html">Aatrox</A>
+  <A HREF = "League.2.html"></A>
+  <A HREF = "League.3.html"></A>
+  <A HREF = "League.4.html"></A>
+  <A HREF = "Leauge.5.html"></A>
+  <A HREF = "Leauge.6.html"></A>
   
  
 </body>
