--- a/League.aatrox.html
+++ b/League.aatrox.html
@@ -8,7 +8,7 @@
   <h1>Aatrox</h1>
   <p><b>Aatrox Lore</b>: <br>
   Originally an Ascended, but now a Darkin, he was trapped within his sword, and now seeks to end the world in an effort to end himself.</br></p> 
-  <p><b>Matchups</b>: <br>
+  <p><b>Matchups (Top)</b>: <br>
     Akali --- </br><br>
     Camille --- </br><br>
     Cho'Gath --- </br><br>
