--- a/Precalculus.2.html
+++ b/Precalculus.2.html
@@ -5,7 +5,7 @@
 <title>Precalculus</title>
 <body>
 
-  <h1>Elementary Functions</h1>
+  <h1>Elementary Parent Functions</h1>
   <p>y = x<br>
   <iframe src="https://www.desmos.com/calculator/nvcqyteiyu?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
   domain: (-oo,oo) range: (-oo,oo)</br></p>
@@ -18,6 +18,25 @@
   <p>y = 1/x<br>
   <iframe src="https://www.desmos.com/calculator/cpvlmvltge?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
   domain: (-oo,0) U (0,oo) range: (-oo,0) U (0,oo)</p>
+  <p>y = 1/x^2<br>
+  <iframe src="https://www.desmos.com/calculator/8n4zpcfb4b?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,0) U (0,oo) range: (0,oo)</p>
+  <p>y = b^x, ex: b = 10<br>
+  <iframe src="https://www.desmos.com/calculator/4ayqsynmts?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: (0,oo)</br></p>
+  <p>y = log(x)<br>
+  <iframe src="https://www.desmos.com/calculator/799tzyefpt?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (0,oo) range: (-oo,oo)</br></p>
+  <p>y = sqrt(x)<br>
+  <iframe src="https://www.desmos.com/calculator/cx1ltjwgkf?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></iframe></br><br>
+  domain: [0,oo) range: [0,oo)</br></p>
+  <p>y = cbrt(x)<br>
+  <iframe src="https://www.desmos.com/calculator/wncjzuz7mj?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: (-oo,oo)</br></p>
+  <p>y = |x|<br>
+  <iframe src="https://www.desmos.com/calculator/ebp5rti6cl?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe></br><br>
+  domain: (-oo,oo) range: [0,oo)</br></p>
+
   
  
 </body>
