--- a/Precalculus.html
+++ b/Precalculus.html
@@ -6,21 +6,21 @@
 <body>
 
   <h1>Precalculus</h1>
-  <A HREF = "Precalculus.1.html">Introdudction to Functions</A>
-  <A HREF = "Precalculus.2.html">Elementary Parent Functions</A>
-  <A HREF = "Precalculus.3.html">Average Rate of Change</A>
-  <A HREF = "Precalculus.4.html">Exponencial and Logarithmic Functions</A>
-  <A HREF = "Precalculus.5.html">Polynomial Functions</A>
-  <A HREF = "Precalculus.6.html">Rational Functions</A>
-  <A HREF = "Precalculus.7.html">Features of a Graph</A>
-  <A HREF = "Precalculus.8.html">Transformations of Graphs</A>
-  <A HREF = "Precalculus.9.html">Graphical Symmetry</A>
-  <A HREF = "Precalculus.10.html">Features of a Graph from an Equation</A>
-  <A HREF = "Precalculus.11.html">Forms of Linear and Quadratic Equations</A>
-  <A HREF = "Precalculus.12.html">Properties of Logarithms</A>
-  <A HREF = "Precalculus.13.html">Function Composition</A>
-  <A HREF = "Precalculus.14.html">Inverse Functions</A>
-  <A HREF = "Precalculus.15.html">Solving Inequalities</A>
+  <A HREF = "Precalculus.1.html">Introdudction to Functions</A><br>
+  <A HREF = "Precalculus.2.html">Elementary Parent Functions</A></br><br>
+  <A HREF = "Precalculus.3.html">Average Rate of Change</A></br><br>
+  <A HREF = "Precalculus.4.html">Exponencial and Logarithmic Functions</A></br><br>
+  <A HREF = "Precalculus.5.html">Polynomial Functions</A></br><br>
+  <A HREF = "Precalculus.6.html">Rational Functions</A></br><br>
+  <A HREF = "Precalculus.7.html">Features of a Graph</A></br><br>
+  <A HREF = "Precalculus.8.html">Transformations of Graphs</A></br><br>
+  <A HREF = "Precalculus.9.html">Graphical Symmetry</A></br><br>
+  <A HREF = "Precalculus.10.html">Features of a Graph from an Equation</A></br><br>
+  <A HREF = "Precalculus.11.html">Forms of Linear and Quadratic Equations</A></br><br>
+  <A HREF = "Precalculus.12.html">Properties of Logarithms</A></br><br>
+  <A HREF = "Precalculus.13.html">Function Composition</A></br><br>
+  <A HREF = "Precalculus.14.html">Inverse Functions</A></br><br>
+  <A HREF = "Precalculus.15.html">Solving Inequalities</A></br>
  
 </body>
 </html>
