--- a/Precalculus.html
+++ b/Precalculus.html
@@ -6,7 +6,7 @@
 <body>
 
   <h1>Precalculus</h1>
-  <A HREF = "Precalculus.1.html">Introdudction to Functions</A><br>
+  <A HREF = "Precalculus.1.html">Introdudction to Functions</A><br><br>
   <A HREF = "Precalculus.2.html">Elementary Parent Functions</A></br><br>
   <A HREF = "Precalculus.3.html">Average Rate of Change</A></br><br>
   <A HREF = "Precalculus.4.html">Exponencial and Logarithmic Functions</A></br><br>
