--- a/Precalculus.3.html
+++ b/Precalculus.3.html
@@ -7,7 +7,7 @@
 
   <h1>Average Rate of Change</h1>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/F-7Poa3i1ZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-  <p></p>
+  <p>m = rise/run = (y2-y1)/(x2-x1)</p>
   <p></p>
   <p></p>
   <p></p>
