--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 	<head>
   		<meta charset="utf-8" />
   		<meta name="viewport" content="width=device-width" />
-  		<title>Template: Starting Point</title>
-		<link href="normalize.css" rel="stylesheet" type="text/css"
-  		/>
+  		<title>Narateena Dowding</title>
+		<link href="normalize.css" rel="stylesheet" type="text/css"/>
   		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<main>
+			<h1>Narateena Dowding</h1>
+			<h2>Introduction:</h2>
+			<p>
+			Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
+			I am also studying with Thinkful to learn web development.
+			</p>
+		</main>
 		<script src="script.js></script>
 	</body>
 </html>
