--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 			Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
 			I am also studying with Thinkful to learn web development.
 			</p>
+			<h2>
 		</main>
-		<script src="script.js></script>
+		<script src="script.js"></script>
 	</body>
 </html>
 
