--- a/index.html
+++ b/index.html
@@ -10,12 +10,28 @@
 	<body>
 		<main>
 			<h1>Narateena Dowding</h1>
-			<h2>Introduction:</h2>
-			<p>
-			Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
-			I am also studying with Thinkful to learn web development.
-			</p>
-			<h2>
+			<article>
+				<h2>Introduction:</h2>
+				<p>
+					Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
+					I am also studying with Thinkful to learn web development.
+				</p>
+				<hr>
+				<h2>About Me:</h2>
+				<p>
+					I am interested in learning software development and enjoy working in collaborative teams. 
+					Among my other interestes are mathematics, physics, the game Go, video games and cooking.
+				</p>
+				<hr>
+			</article>
+			<footer>
+				<h3>Contact:</h3>
+				<p>
+					<a href="www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
+					<a href="github.com/narateenadowding">GitHub</a>
+				</p>
+			</footer>
+			
 		</main>
 		<script src="script.js"></script>
 	</body>
