--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<main>
-			<h1>Narateena Dowding</h1>
+			<header>
+				<h1>Narateena Dowding</h1>
+			</header>
 			<article>
 				<h2>Introduction:</h2>
 				<p>
