--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</p>
 				<hr>
 			</article>
-			<footer>
-				<h3>Contact:</h3>
+			<footer style="text-align:left">
 				<p>
+					<h3>Contact:</h3>
 					<a href="www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
 					<a href="github.com/narateenadowding">GitHub</a>
 				</p>
