--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			</header>
 			<article>
 				<h2>Introduction:</h2>
-				<p>
+				<p class="centered">
 					Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
 				</p>
 				<hr>
 				<h2>About Me:</h2>
-				<p>
+				<p class="centered">
 					I am interested in learning software development and enjoy working in collaborative teams. 
 					Among my other interestes are mathematics, physics, the game Go, video games and cooking.
 				</p>
