--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 					Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
 				</p>
-				<hr>
+				<hr class="hr">
 				<h2>About Me:</h2>
 				<p class="centered">
 					I am interested in learning software development and enjoy working in collaborative teams. 
 					Among my other interestes are mathematics, physics, the game Go, video games and cooking.
 				</p>
-				<hr>
+				<hr class="hr">
 			</article>
-			<footer style="text-align:left">
+			<footer style="background:#49fb35; color:white; text-align:left">
 				<p>
 					<h3>Contact:</h3>
 					<a href="www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
