--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 			</header>
 			<article>
 				<h2>Introduction:</h2>
-				<p class="centered">
+				<p>
 					Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
 				</p>
 				<hr>
 				<h2>About Me:</h2>
-				<p class="centered">
+				<p>
 					I am interested in learning software development and enjoy working in collaborative teams. 
 					Among my other interestes are mathematics, physics, the game Go, video games and cooking.
 				</p>
 				<hr>
 			</article>
-			<footer style="background:#49fb35; color:white; text-align:left">
+			<footer>
 				<p>
 					<h3>Contact:</h3>
 					<a href="www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
