--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<article>
 				<h2>Introduction:</h2>
 				<p>
-					Hello World! I am a 3rd year computer science student, studying at North College in Seattle, WA. 
+					Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
 				</p>
 				<hr>
