--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 				<h2>About Me:</h2>
 				<p>
 					I am interested in learning software development and enjoy working in collaborative teams. 
-					Among my other interestes are mathematics, physics, the game Go, video games and cooking.
+					Among my other interestes are, 
+					<ul>
+						<li>mathematics</li>
+						<li>physics</li>
+						<li>the game Go</li>
+						<li>video games</li> 
+						<li>and cooking.</li>
+					</ul>
 				</p>
 				<hr>
 			</article>
