--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<footer>
 				<p>
 					<h3>Contact:</h3>
-					<a href="www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
-					<a href="github.com/narateenadowding">GitHub</a>
+					<a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
+					<a href="http://github.com/narateenadowding">GitHub</a>
 				</p>
 			</footer>
 			
