--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	</head>
 	<body>
 		<main>
+<!--Header-->
 			<header>
 				<h1>Narateena Dowding</h1>
 			</header>
+<!--Article-->
 			<article>
 				<h2>Introduction:</h2>
 				<p>
@@ -23,21 +25,24 @@
 				<p>
 					I am interested in learning software development and enjoy working in collaborative teams. 
 					Among my other interestes are, 
-					<ul>
+					<ol>
 						<li>mathematics</li>
 						<li>physics</li>
 						<li>the game Go</li>
 						<li>video games</li> 
 						<li>and cooking.</li>
-					</ul>
+					</ol>
 				</p>
 				<hr>
 			</article>
+<!--Footer-->
 			<footer>
+				<h3>Contact:</h3>
 				<p>
-					<h3>Contact:</h3>
-					<a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
-					<a href="http://github.com/narateenadowding">GitHub</a>
+					<ul>
+						<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
+						<li><a href="http://github.com/narateenadowding">GitHub</a>
+					</ul>
 				</p>
 			</footer>
 			
