--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 				<h1>Narateena Dowding</h1>
 			</header>
 <!--Article-->
-			<article>
+			<article class="float-left">
 				<h2>Introduction:</h2>
+				<img src="url" alt="Cat" class="float-right">
 				<p>
 					Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
 				</p>
-				<hr>
+				<hr class="green">
 				<h2>About Me:</h2>
 				<p>
 					I am interested in learning software development and enjoy working in collaborative teams. 
@@ -33,7 +34,7 @@
 						<li>and cooking.</li>
 					</ol>
 				</p>
-				<hr>
+				<hr class="green">
 			</article>
 <!--Footer-->
 			<footer>
