--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--Article-->
 			<article class="float-left">
 				<h2>Introduction:</h2>
-				<img src="url" alt="Cat" class="float-right">
+				<img src="cat-98359__340" alt="Cat" class="float-right">
 				<p>
 					Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 					I am also studying with Thinkful to learn web development.
