--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<hr class="green">
 			</article>
 <!--Footer-->
-			<footer>
+			<footer class="float-left">
 				<h3>Contact:</h3>
 				<p>
 					<ul>
