--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 					</ol>
 				</p>
 				<hr class="green">
-			</article>
-<!--Footer-->
-			<footer class="float-left">
 				<h3>Contact:</h3>
 				<p>
 					<ul>
@@ -45,6 +42,9 @@
 						<li><a href="http://github.com/narateenadowding">GitHub</a>
 					</ul>
 				</p>
+			</article>
+<!--Footer-->
+			<footer>
 			</footer>
 			
 		</main>
