--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
 				<h1>Narateena Dowding</h1>
 			</header>
 <!--Article-->
-			<article class="float-left">
-				<h2>Introduction:</h2>
+			<article>
 				<img src="cat-98359__340.jpg" alt="Cat" class="float-right green">
-				<p>
-					Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
-					I am also studying with Thinkful to learn web development.
-				</p>
-				<hr class="green">
-				<h2>About Me:</h2>
-				<p>
-					I am interested in learning software development and enjoy working in collaborative teams. 
-					Among my other interestes are, 
-					<ol>
-						<li>mathematics</li>
-						<li>physics</li>
-						<li>the game Go</li>
-						<li>video games</li> 
-						<li>and cooking.</li>
-					</ol>
-				</p>
-				<hr class="green">
-				<h2>Contact:</h2>
-				<p>
-					<ul>
-						<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
-						<li><a href="http://github.com/narateenadowding">GitHub</a>
-					</ul>
-				</p>
+				<div class="float-left">
+					<h2>Introduction:</h2>
+					<p>
+						Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
+						I am also studying with Thinkful to learn web development.
+					</p>
+					<hr class="green">
+					<h2>About Me:</h2>
+					<p>
+						I am interested in learning software development and enjoy working in collaborative teams. 
+						Among my other interestes are, 
+						<ol>
+							<li>mathematics</li>
+							<li>physics</li>
+							<li>the game Go</li>
+							<li>video games</li> 
+							<li>and cooking.</li>
+						</ol>
+					</p>
+					<hr class="green">
+					<h2>Contact:</h2>
+					<p>
+						<ul>
+							<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
+							<li><a href="http://github.com/narateenadowding">GitHub</a>
+						</ul>
+					</p>
+				</div>
 			</article>
+				
 <!--Footer-->
 			<footer>
 			</footer>
