--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			</header>
 <!--Article-->
 			<article>
-				<img src="cat-98359__340.jpg" alt="Cat" class="float-right green">
-				<div class="float-left">
+				<img src="cat-98359__340.jpg" alt="Cat" class="green">
+				<div>
 					<h2>Introduction:</h2>
 					<p>
 						Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
