--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</header>
 <!--Article-->
 			<article>
-				<img src="cat-98359__340.jpg" alt="Cat" class="green">
+				<img src="cat.jpg" alt="Cat" class="green">
 				<div>
 					<h2>Introduction:</h2>
 					<p>
