--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<main>
 <!--Header-->
 			<header>
-				<h1 class="name">Narateena Dowding</h1>
+				<h1>Narateena Dowding</h1>
 			</header>
 <!--Article-->
 			<article>
