--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
   		<meta charset="utf-8" />
   		<meta name="viewport" content="width=device-width" />
@@ -9,24 +9,27 @@
 	</head>
 	<body>
 		<main>
-<!--Header-->
+			<!--Header-->
 			<header>
 				<h1>Narateena Dowding</h1>
 			</header>
-<!--Article-->
+			<!--Article-->
 			<article>
 				<img src="noni.jpg" alt="Narateena Dowding" class="green">
 				<div>
+					<!--Introduction-->
 					<h2>Introduction:</h2>
 					<p>
 						Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 						I am also studying with Thinkful to learn web development.
 					</p>
 					<hr class="green">
+					<!--About Me-->
 					<h2>About Me:</h2>
 					<p>
 						I am interested in learning software development and enjoy working in collaborative teams. 
 						Among my other interestes are, 
+					</p>
 						<ol>
 							<li>mathematics</li>
 							<li>physics</li>
@@ -34,15 +37,14 @@
 							<li>video games</li> 
 							<li>and cooking.</li>
 						</ol>
-					</p>
+
 					<hr class="green">
 					<h2>Contact:</h2>
-					<p>
 						<ul>
 							<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
 							<li><a href="http://github.com/narateenadowding">GitHub</a>
 						</ul>
-					</p>
+		
 				</div>
 			</article>
 				
