--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 						</ol>
 
 					<hr class="green">
-					<h2>Contact:</h2>
+					<!--Contact-->
+					<h3>Contact:</h3>
 						<ul>
 							<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
 							<li><a href="http://github.com/narateenadowding">GitHub</a>
@@ -48,7 +49,7 @@
 				</div>
 			</article>
 				
-<!--Footer-->
+			<!--Footer-->
 			<footer>
 			</footer>
 			
