--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			</header>
 			<!--Article-->
 			<article>
-				<img src="noni.jpg" alt="Narateena Dowding" class="green">
+				<img src="noni.jpg" alt="Narateena Dowding">
 					<!--Introduction-->
 					<h2>Introduction:</h2>
 					<p>
 						Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 						I am also studying with Thinkful to learn web development.
 					</p>
-					<hr class="green">
+					<hr>
 					<!--About Me-->
 					<h2>About Me:</h2>
 					<p>
@@ -37,7 +37,7 @@
 							<li>and cooking.</li>
 						</ol>
 
-					<hr class="green">
+					<hr>
 					<!--Contact-->
 					<h3>Contact:</h3>
 						<ul>
