--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 		<main>
 			<!--Header-->
 			<header>
-				<h1>Narateena Dowding</h1>
+				<h1 class="container">Narateena Dowding</h1>
 			</header>
 			<!--Article-->
 			<article>
 				<img src="noni.jpg" alt="Narateena Dowding">
 					<!--Introduction-->
-					<h2>Introduction:</h2>
+					<h2 class="container2">Introduction:</h2>
 					<p>
 						Hello World! I am a 2nd year computer science student, studying at North College in Seattle, WA. 
 						I am also studying with Thinkful to learn web development.
 					</p>
 					<hr>
 					<!--About Me-->
-					<h2>About Me:</h2>
+					<h2 class="container2">About Me:</h2>
 					<p>
 						I am interested in learning software development and enjoy working in collaborative teams. 
 						Among my other interestes are, 
@@ -39,7 +39,7 @@
 
 					<hr>
 					<!--Contact-->
-					<h3>Contact:</h3>
+					<h2 class="container2">Contact:</h2>
 						<ul>
 							<li><a href="http://www.linkedin.com/in/narateena-dowding-2b2697236">Linkedin</a>
 							<li><a href="http://github.com/narateenadowding">GitHub</a>
